# agentic-research-assistant

./: README.md  main.py  pyproject.toml
scratch/: hello_gemini.py
